<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.NumbersList">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar_list"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        app:titleTextColor="#fff"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:id="@+id/category_spinner"
                android:background="@drawable/edit_text"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:background="@drawable/edit_text"
                android:hint="@string/phone_number"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:layout_height="wrap_content"
                android:id="@+id/new_phone_number"/>
            <EditText
                android:layout_width="match_parent"
                android:background="@drawable/edit_text"
                android:hint="@string/name"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:layout_height="wrap_content"
                android:id="@+id/new_phone_name"/>

            <Button
                android:id="@+id/new_insert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ListView
                android:id="@+id/insert_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>